test/corpus/preamble.txt
================================================================================
Single signature followed by summary
================================================================================

foo(a, b)

Summary line.

--------------------------------------------------------------------------------

(document
  (preamble
    (signature
      (line))
    (summary
      (line))))

================================================================================
Multiple signatures followed by summary
================================================================================

foo(a, b)

bar(c, d)

Summary line.

--------------------------------------------------------------------------------

(document
  (preamble
    (signature
      (line))
    (signature
      (line))
    (summary
      (line))))

================================================================================
Signature with no summary at all
================================================================================

foo()

--------------------------------------------------------------------------------

(document
  (preamble
    (signature
      (line))))

================================================================================
Summary only, no signature
================================================================================

Summary line.

--------------------------------------------------------------------------------

(document
  (preamble
    (summary
      (line))))

================================================================================
Summary with extended summary
================================================================================

Summary line.

Extended summary
more text.

--------------------------------------------------------------------------------

(document
  (preamble
    (summary
      (line))
    (extended_summary
      (line)
      (line))))

================================================================================
Docstring with no summary, straight into a section
================================================================================

Parameters
----------
x : int
    description

--------------------------------------------------------------------------------

(document
  (parameters_section
    (section_name)
    (section_underline)
    (parameter
      (entry_header
        (name)
        (separator)
        (type))
      (description
        (line)))))

================================================================================
Empty docstring
================================================================================

--------------------------------------------------------------------------------

(document)

================================================================================
Blank-only docstring
================================================================================



--------------------------------------------------------------------------------

(document)

================================================================================
Docstring with no trailing newline
================================================================================

Summary line.
--------------------------------------------------------------------------------

(document
  (preamble
    (summary
      (line))))
